--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,5 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<div class='well'>
+	<h2>About 98Lumens</h2>
+	<br>
+	<p>Climate change concerns, coupled with high oil prices, peak oil, and increasing consumer support are driving increasing renewable energy adoption around the world. Rooftop solar is currently considered an attractive way for individuals to be part of this green revolution. However, while the Unites States has some of the best solar insolation in the world, only small fraction of US population has the capability or the economic sense to install rooftop solar. 98Lumens, a company based in Pasadena, CA is introducing a new business model for individuals, households and organizations to go solar without any of the previous barriers associated with rooftop solar systems.</p>
+</div>
