--- a/app/views/static_pages/dashboard.html.erb
+++ b/app/views/static_pages/dashboard.html.erb
@@ -1,2 +1,5 @@
-<h1>StaticPages#dashboard</h1>
-<p>Find me in app/views/static_pages/dashboard.html.erb</p>
+<div class='well'>
+	<h1>98Lumens</h1>
+	<br>
+	<p>Making solar more accessible and affordable to a new generation of energy consumers.</p>
+</div>
