--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,16 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<div class='well'>
+	<h1>98Lumens</h1>
+	<br>
+	<p>Making solar more accessible and affordable to a new generation of energy consumers.</p>
+</div>
+
+<p> 
+<div class="row">
+	<div class="centre">
+		<button class="btn btn-large btn-primary" type="button">Login</button>
+		<br>
+		<br>
+		<button class="btn btn-large" type="button">Sample dashboard</button>
+	</div>
+</div>
+</p>
