--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class='container'>
-		<div class='navbar navbar-fixed-top'>
+		<div class='navbar navbar-fixed-top navbar-inverse'>
 			<div class='navbar-inner'>
 				      <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
 			    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -18,24 +18,24 @@
 			    </a>
 			 
 			    <!-- Be sure to leave the brand out there if you want it shown -->
-			    <a class="brand" href="#">Project name</a>
+			    <a class="brand" href="home">98Lumens</a>
+
+			    <div class='pull-right'>
+					<button class="btn btn-small" type="button">Sign in</button>
+				</div>
 			 
 			    <!-- Everything you want hidden at 940px or less, place within here -->
 			    <div class="nav-collapse">
 				    <ul class="nav">
-				      <li class="active"><a href="#">Home</a></li>
-				      <li><a href="#">Link</a></li>
-				      <li><a href="#">Link</a></li>
+				      <li class="active"><a href="home">Home</a></li>
+				      <li><a href="about">About</a></li>
+				      <li><a href="dashboard">Dashboard</a></li>
 				    </ul>
 			      <!-- .nav, .navbar-search, .navbar-form, etc -->
 			    </div>
 			</div>
 		</div>
-		<div class='row-fluid'>
-			<div class='span9'>
-				<%= yield %>
-			</div>
-		</div>
+		<%= yield %>
 	</div>
 </body>
 </html>
